--- a/style.css
+++ b/style.css
@@ -1,1 +1,16 @@
+body {
+    background: #D3D3D3
+}
+
+h1 {
+    text-align:center
+}
+
+p {
+    text-align: center;
+}
+
+em strong {
+    color:  #000000
+}
 
